==> spradere/TaskMate/src/hal/board/arduino_mega_old/timer3.c <==
/*
 * TaskMate Project
 * (c) 2025 PRADERE Sebastien
 *
 * This file is part of TaskMate and is distributed under the TaskMate License
 * v1.0. See the LICENSE file for full license terms.
 *
 * Non-commercial use permitted under conditions. Commercial use requires a
 * separate license. Commercial licensing inquiries:
 * https://codeberg.org/Doul09/TaskMate/issues
 *
 * Powered by TaskMate, (c) 2025 PRADERE Sebastien
 */

#include <avr/io.h>
#include "sysCore/TaskMate_public.h"
#include "arch/avr8/timer3.h"

const int TIMER3_OVERFLOW_COUNT = 625; // Interrupt every 10ms (10.10^-3 x 16.10^6 )/256 = 625

void timer3Init(void)
{

	// Set up timer3 interrupt for RTC
	TCCR3B |= (1 << WGM32) | (1 << CS32); // CTC mode, prescaler 256
	OCR3A = TIMER3_OVERFLOW_COUNT;
}

void timer3Start(void)
{
	// start by enable INT
	TIMSK3 |= (1 << OCIE3A);
}

void timer3Stop(void)
{
	// stop by disable INT
	TIMSK3 &= ~(1 << OCIE3A);
}
